# srt-labeler

./: .gitignore  README.md  cli.sh  custom.db  pyproject.toml
srt_labeler/: __init__.py  config.py  constants.py  logger.py  main.py  merger.py  pipeline.py  stats.py  utils.py
srt_labeler/lwe/config/profiles/default/: config.yaml
srt_labeler/lwe/config/profiles/default/presets/: claude-sonnet-chatbot.yaml  claude-sonnet-srt-labeler.yaml  gemini-1.5-flash-srt-labeler.yaml  gemini-1.5-pro-srt-labeler.yaml  gemini-2.5-flash-srt-labeler.yaml  gemini-2.5-pro-srt-labeler.yaml  llama-3.3-chatbot.yaml  llama-3.3-srt-labeler.yaml
srt_labeler/lwe/config/profiles/default/templates/: transcription-srt-labeling-with-audio.md  transcription-srt-labeling.md
tests/: conftest.py  stats.db  test_config.py  test_logger.py  test_main.py  test_pipeline.py  test_srt_merger.py  test_stats.py  test_utils.py
