[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-labeler"
version = "0.1.0"
description = "Apply speaker labels to the text content of SRT blocks using a language model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name="Chad Phillips", email="chad@apartmentlines.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tenacity",
    "srt",
    "llm-workflow-engine @ git+https://github.com/llm-workflow-engine/llm-workflow-engine.git@c099ade21ec4b8763ab1213d3370d9cd6e93e05c",
    "lwe-plugin-provider-chat-fireworks @ git+https://github.com/llm-workflow-engine/lwe-plugin-provider-chat-fireworks.git@97b529826d58177cf25d3f33fa5bda5d03d62a71",
    "lwe-plugin-provider-chat-google-genai @ git+https://github.com/llm-workflow-engine/lwe-plugin-provider-chat-google-genai.git@087e9a30ca8f5fa5719cbbcf97ced848b9f77ec6",
    "lwe-plugin-provider-openrouter @ git+https://github.com/llm-workflow-engine/lwe-plugin-provider-openrouter.git@932dc19c1e1d3805d48e005ff24fe50747805073",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["srt_labeler"]

[tool.setuptools.package-data]
srt_labeler = [
    "lwe/config/**/*",
    "lwe/data/",
]

[project.scripts]
srt-merger = "srt_labeler.merger:main"
srt-pipeline = "srt_labeler.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pyright",
]
