[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-labeler"
version = "0.1.0"
description = "Apply speaker labels to the text content of SRT blocks using a language model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name="Chad Phillips", email="chad@apartmentlines.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tenacity",
    "srt",
    "llm-workflow-engine",
    # Disabled, protobuf conflict with langchain-google-genai
    # "lwe-plugin-provider-chat-fireworks @ git+https://github.com/llm-workflow-engine/lwe-plugin-provider-chat-fireworks.git@7e5322b146e09cbaf857f164ceae875d46f7a949",
    "lwe-plugin-provider-chat-google-genai @ git+https://github.com/llm-workflow-engine/lwe-plugin-provider-chat-google-genai.git@ca94f030e500e713aa517aaef06aa8afaeb84f48",
    "lwe-plugin-provider-openrouter @ git+https://github.com/llm-workflow-engine/lwe-plugin-provider-openrouter.git@5af2f463b426fd9b7e3bb11d3a04622125d85b92",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["srt_labeler"]

[tool.setuptools.package-data]
srt_labeler = [
    "lwe/config/**/*",
    "lwe/data/",
]

[project.scripts]
srt-merger = "srt_labeler.merger:main"
srt-pipeline = "srt_labeler.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pyright",
]
